# flowtastic

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
docker/: docker-compose.yaml
flowtastic/: __init__.py  _deserialization_combo.py  app.py  config.py  logger.py  publish.py  types.py
flowtastic/cli/: __init__.py  cli.py  colors.py  local_environment.py
flowtastic/message/: __init__.py  base.py  exceptions.py  json_message.py  yaml_message.py
flowtastic/utils/: asynchronous.py  list.py  pydantic_models.py
scripts/: lint.sh  publish.sh  test.sh
tests/: test_app.py
