[tool.poetry]
name = "flowtastic"
version = "0.0.1a0"
description = "Python Stream Processing (Faust like!) backed by pydantic."
authors = ["Gabriel Martín Blázquez <gmartinbdev@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/gabrielmbmb/flowtastic"
documentation = "https://flowtastic.gabrielmb.com"
repository = "https://github.com/gabrielmbmb/flowtastic"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
    "Topic :: System :: Networking",
    "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
python = "^3.6.2"
pydantic = "^1.9.1"
aiokafka = "^0.7.2"
rich = "^12.4.4"
orjson = { version = "^3.6.1", optional = true }

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.19.0"
mypy = "^0.960"
pyupgrade = [
    { version = "2.31.0", python="<3.7" },
    { version = "^2.32.1", python=">=3.7" },
]
pytest-cov = "^3.0.0"

[tool.poetry.extras]
orjson = ["orjson"]

[tool.poetry.scripts]
flowtastic = "flowtastic.cli.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = ["flowtastic"]

[tool.mypy]
plugins = "pydantic.mypy"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["docker.*", "aiokafka.*"]
ignore_missing_imports = true
